@@ -1,0 +1,5 @@
+* Sir Jacob can't break chests with his special
+* Sir Jacob gets stopped by opened doors when using special
+* Ryder's special can teleport to unwalkable spaces
+* Characters should be able to move through each other as long as they have action points to move afterwards.
+* Ryder should be disabled in combat while Sir Jacob is fighting before he sees Ryder
