@@ -1,5 +1,5 @@
 {
 	"version": 1,
 	"description": "Follow our heroes as they defeat legendary evil.",
-	"maps": ["sample1", "sample2"]
+	"maps": ["humble_beginnings"]
 }
