@@ -51,3 +51,4 @@ v0.6.0
 * Special abilities for characters
 * Improved scripting
 * Destructable objects
+* Replicate the first original campaign scenario
